examples/datalog/10_edge_cases/141_all_same_value.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_same_val
Knowledge graph 'test_same_val' created.
Switched to knowledge graph: test_same_val
> .kg use test_same_val
Switched to knowledge graph: test_same_val
> +data[(1, 100), (2, 100), (3, 100)].
Inserted 3 fact(s) into 'data'.
> +sum_same(<SUM:V>) :- data(_, V).
Script error: Parse error: Invalid term: '<SUM:V>'
